--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -297,7 +297,7 @@
 				<div class="wd-offer">
 					<div class="wd-offer-name">
 						<p class="wd-title">
-							簡約精緻方案
+							簡約精緻 A 方案
 						</p>
 						<p class="wd-text">
 							- 提供憨兒一週的工作量 -
@@ -327,14 +327,14 @@
 					</div>
 					<div class="wd-offer-bonus">
 						<p class="wd-text">
-							伴郎伴娘禮  5 份
+							特色探房禮 3 份
 						</p>
 					</div>
 				</div>
 				<div class="wd-primary-offer">
 					<div class="wd-offer-name">
 						<p class="wd-super-title">
-							幸福推薦方案
+							幸福推薦 B 方案
 						</p>
 						<p class="wd-text">
 							- 提供憨兒 20 天的工作量 -
@@ -353,7 +353,7 @@
 					</div>
 					<div class="wd-offer-intro">
 						<p class="wd-text">
-							200 組皂絲包 (20 桌)
+							250 組皂絲包 (25 桌)
 						</p>
 						<p class="wd-text">
 							客製化貼紙與吊牌
@@ -367,17 +367,17 @@
 							進場禮 60 份
 						</p>
 						<p class="wd-text">
-							伴郎伴娘禮 9 份
+							活動抽獎禮 3 份
 						</p>
 						<p class="wd-text">
-							特色探房禮 3 組
+							特色探房禮 7 份
 						</p>
 					</div>
 				</div>
 				<div class="wd-offer">
 					<div class="wd-offer-name">
 						<p class="wd-title">
-							豪華五禮方案
+							豪華五禮 C 方案
 						</p>
 						<p class="wd-text">
 							- 提供憨兒 20 天以上的工作量 -
@@ -385,12 +385,12 @@
 					</div>
 					<div class="wd-offer-price">
 						<p class="wd-title">
-							洽詢獲得優惠報價
+							洽詢獲得專屬優惠報價
 						</p>
 					</div>
 					<div class="wd-offer-intro">
 						<p class="wd-text">
-							200 組以上皂絲包 (20 桌以上)
+							250 組以上皂絲包 (25 桌以上)
 						</p>
 						<p class="wd-text">
 							客製化貼紙與吊牌
@@ -416,19 +416,32 @@
 					</p>
 					<p class="wd-text">
 						即日起，只要填寫諮詢表<br>
-						就可免費獲得三組婚禮皂絲包！<br>
+						就可免費獲得兩組婚禮皂絲包！<br>
 						數量有限，送完為止！
 					</p>
 					<p class="wd-title">
 						再送驚喜贈禮及現金折扣！
 					</p>
 					<p class="wd-text">
-						預約參加皂絲 DIY 行程（免費），與憨兒一起製作你的婚禮小物，會有讓你想不到的驚喜贈禮與現金折扣！<br>
+						預約參加皂絲 DIY 行程，與憨兒一起製作你的婚禮小物，會有讓你想不到的驚喜贈禮與現金折扣！<br>
 						（填寫諮詢表後將有專人與你解說）
 					</p>
 				</div>
 				<div id="wd-cta-form">
-
+					<form class="wd-text" action="" method="">
+						<div class="wd-cta-form-content">
+							<label for="wd-cta-name">姓名</label>
+							<input id="wd-cta-name" class="wd-cta-input" type="text">
+						</div>
+						<div class="wd-cta-form-content">
+							<label for="wd-cta-phone">聯絡電話</label>
+							<input id="wd-cta-phone" class="wd-cta-input" type="text">
+						</div>
+						<div class="wd-cta-form-content">
+							<label for="wd-cta-email">email</label>
+							<input id="wd-cta-email" class="wd-cta-input" type="text">
+						</div>
+					</form>
 				</div>
 			</div>
 		</main>
