add cursor setting to btn

--- a/resource/css/_general.scss
+++ b/resource/css/_general.scss
@@ -109,6 +109,7 @@ a.no-href {
 	font-weight: 300;
 	transition-property: border-color, background-color, color;
 	transition-duration: .3s;
+	cursor: pointer;
 	&:hover {
 		@if $border-color-hover {
 			border-color: $border-color-hover;
