--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -1508,6 +1508,8 @@ label[for="purchase-amount"] {
  */
 
 $wedding-main-color: #ff8674;
+$wedding-text-gray: #4d4d4d;
+$wedding-action-gray: #f2f2f2;
 $mockup-width: 1920px;
 
 @function mockupToVW($px, $base: $mockup-width) {
@@ -1527,12 +1529,9 @@ $mockup-width: 1920px;
 	color: $wedding-main-color;
 }
 
-.wd-subtitle {
-	color: #4d4d4d;
-}
-
+.wd-subtitle,
 .wd-text {
-	color: #4d4d4d;
+	color: $wedding-text-gray;
 }
 
 // laptop
@@ -1612,7 +1611,7 @@ $mockup-width: 1920px;
 	}
 }
 
-.wedding-text-btn {
+.wd-text-btn {
 	@include btn($border-color: $wedding-main-color,
 				 $background-color: transparent,
 				 $font-color: $wedding-main-color,
@@ -1630,7 +1629,7 @@ $mockup-width: 1920px;
 	}
 }
 
-.wedding-submit-btn {
+.wd-submit-btn {
 	@include btn($border-color: $wedding-main-color,
 				 $background-color: $wedding-main-color,
 				 $font-color: #fff,
@@ -1740,7 +1739,7 @@ $mockup-width: 1920px;
 
 	.wd-title,
 	.wd-text {
-		color: #4d4d4d;
+		color: $wedding-text-gray;
 	}
 }
 
@@ -1770,7 +1769,7 @@ $mockup-width: 1920px;
 				height: mockupToVW(84px);
 				line-height: calc(63 / 39);
 			}
-			& > .wedding-text-btn {
+			& > .wd-text-btn {
 				margin: mockupToVW(60px) 0 0 mockupToVW(155px);
 			}
 		}
@@ -2048,13 +2047,13 @@ $mockup-width: 1920px;
 }
 
 #wd-cta {
-	display: flex;
-	justify-content: space-between;
-	padding: mockupToVW(225px) mockupToVW(275px) mockupToVW(255px);
-	background-color: #f2f2f2;
+	background-color: $wedding-action-gray;
 
 	// laptop
 	@media screen and (min-width: $media-breakpoint-mobile + 1px) {
+		display: flex;
+		justify-content: space-between;
+		padding: mockupToVW(225px) mockupToVW(275px) mockupToVW(255px);
 		& > .wd-intro-content {
 			width: mockupToVW(408px);
 			margin-top: mockupToVW(42px);
@@ -2066,31 +2065,105 @@ $mockup-width: 1920px;
 				}
 			}
 		}
+	}
+}
 
-		#wd-cta-form {
-			width: mockupToVW(830px);
-			height: mockupToVW(600px);
-			box-sizing: border-box;
-			padding: mockupToVW(60px);
-			background-color: #fff;
-			box-shadow: 0 0 18px 3px rgba(153, 153, 153, 0.5);
+#wd-cta-form {
+	box-sizing: border-box;
+	background-color: #fff;
 
-			.wd-cta-form-content {
+	hr {
+		width: 100%;
+		margin: mockupToVW(36px) 0 mockupToVW(37px);
+		border-width: mockupToVW(1px);
+		border-color: #999;
+		border-style: solid none;
+	}
+
+	.wd-cta-form-content {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.wd-cta-input {
+		box-sizing: border-box;
+		border: none;
+		background-color: $wedding-action-gray;
+		&[type=checkbox],
+		&[type=radio] {
+			display: none;
+			& + label {
 				display: flex;
-				justify-content: space-between;
 				align-items: center;
+				position: relative;
+				margin-left: mockupToVW(35px);
+				cursor: pointer;
+				&::before {
+					content: '';
+					position: absolute;
+					left: mockupToVW(-35px);
+					width: mockupToVW(25px);
+					height: mockupToVW(25px);
+					background-color: $wedding-action-gray;
+				}
+				&::after {
+					content: '';
+					display: none;
+					position: absolute;
+					width: mockupToVW(18px);
+				    height: mockupToVW(10px);
+				    left: mockupToVW(-30px);
+				    margin-top: mockupToVW(-5px);
+				    border-width: mockupToVW(5px);
+				    border-style: none none solid solid;
+				    border-color: $wedding-main-color;
+				    background-color: transparent;
+				    transform: rotate(-45deg);
+				}
 			}
-
-			.wd-cta-input[type=text] {
-				width: mockupToVW(600px);
-				margin: mockupToVW(25px) 0;
-				border: none;
-				box-sizing: border-box;
-				padding: 0 mockupToVW(14px);
-				background-color: #f2f2f2;
-				line-height: mockupToVW(50px);
-				vertical-align: middle;
+			&:checked + label::after {
+				display: block;
 			}
 		}
+	}
+
+	// laptop
+	@media screen and (min-width: $media-breakpoint-mobile + 1px) {
+		width: mockupToVW(830px);
+		padding: mockupToVW(47.5px) mockupToVW(60px) mockupToVW(60px);
+		box-shadow: 0 0 18px 3px rgba(153, 153, 153, 0.5);
+
+		.wd-cta-input[type=text] {
+			width: mockupToVW(600px);
+			margin: mockupToVW(12.5px) 0;
+			padding: 0 mockupToVW(14px);
+			line-height: mockupToVW(50px);
+		}
+	}
+}
+
+#wd-cta-offer-wrap {
+	// laptop
+	@media screen and (min-width: $media-breakpoint-mobile + 1px) {
+		margin-top: mockupToVW(28.5px);
+	}
+}
+
+#wd-cta-diy-wrap {
+	// laptop
+	@media screen and (min-width: $media-breakpoint-mobile + 1px) {
+		margin-top: mockupToVW(34px);
+	}
+}
+
+#wd-cta-privacy-wrap {
+	label a {
+		color: $wedding-text-gray;
+	}
+
+	// laptop
+	@media screen and (min-width: $media-breakpoint-mobile + 1px) {
+		margin-top: mockupToVW(25px);
 	}
 }
