--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -17,7 +17,7 @@
 						三三吾鄉婚禮小物<br>
 						諮詢免費送 3 包天然皂絲包！
 					</p>
-					<a href="#wd-cta" class="wedding-text-btn">
+					<a href="#wd-cta" class="wd-text-btn">
 						立即諮詢
 					</a>
 				</div>
@@ -440,6 +440,56 @@
 						<div class="wd-cta-form-content">
 							<label for="wd-cta-email">email</label>
 							<input id="wd-cta-email" class="wd-cta-input" type="text">
+						</div>
+						<div id="wd-cta-offer-wrap" class="wd-cta-form-content">
+							<span>
+								有興趣的方案
+							</span>
+							<input id="wd-cta-offer-a" class="wd-cta-input" type="checkbox" name="wd-cta-offer" value="a">
+							<label for="wd-cta-offer-a">
+								A. 簡約精緻
+							</label>
+							<input id="wd-cta-offer-b" class="wd-cta-input" type="checkbox" name="wd-cta-offer" value="b">
+							<label for="wd-cta-offer-b">
+								B. 幸福推薦
+							</label>
+							<input id="wd-cta-offer-c" class="wd-cta-input" type="checkbox" name="wd-cta-offer" value="c">
+							<label for="wd-cta-offer-c">
+								C. 豪華五禮
+							</label>
+						</div>
+						<div id="wd-cta-diy-wrap" class="wd-cta-form-content">
+							<span>
+								是否有興趣參加皂絲 DIY 體驗行程？
+							</span>
+							<input id="wd-cta-diy-y" class="wd-cta-input" type="radio" name="wd-cta-diy" value="y">
+							<label for="wd-cta-diy-y">
+								我有興趣！
+							</label>
+							<input id="wd-cta-diy-n" class="wd-cta-input" type="radio" name="wd-cta-diy" value="n">
+							<label for="wd-cta-diy-n">
+								不用了謝謝。
+							</label>
+						</div>
+						<hr>
+						<div>
+							<input id="wd-cta-subscribe" class="wd-cta-input" type="checkbox" name="wd-cta-subscribe" value="y" checked>
+							<label for="wd-cta-subscribe">
+								我願意收到關於三三與憨兒們的最新動態
+							</label>
+						</div>
+						<div class="wd-cta-form-content">
+							<div id="wd-cta-privacy-wrap">
+								<input id="wd-cta-privacy" class="wd-cta-input" type="checkbox" name="wd-cta-privacy" value="y">
+								<label for="wd-cta-privacy">
+									我同意
+									<a href="#">
+										個資保護法
+									</a>
+									相關聲明
+								</label>
+							</div>
+							<input class="wd-submit-btn" type="submit" value="立即諮詢">
 						</div>
 					</form>
 				</div>
