--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -428,7 +428,7 @@
 					</p>
 				</div>
 				<div id="wd-cta-form">
-					<form class="wd-text" action="" method="">
+					<form class="wd-text" action="model/wedding.php" method="POST">
 						<div class="wd-cta-form-content">
 							<label for="wd-cta-name">姓名</label>
 							<input id="wd-cta-name" class="wd-cta-input" type="text">
