fix input type on wedding page

--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -434,11 +434,11 @@
 					</div>
 					<div class="wd-cta-form-content">
 						<label for="wd-cta-phone">聯絡電話</label>
-						<input id="wd-cta-phone" class="wd-cta-input" type="text">
+						<input id="wd-cta-phone" class="wd-cta-input" type="phone">
 					</div>
 					<div class="wd-cta-form-content">
 						<label for="wd-cta-email">email</label>
-						<input id="wd-cta-email" class="wd-cta-input" type="text">
+						<input id="wd-cta-email" class="wd-cta-input" type="email">
 					</div>
 					<div id="wd-cta-offer-wrap" class="wd-cta-form-content">
 						<span>
