--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -2140,7 +2140,9 @@ $mockup-width: 1920px;
 		padding: mockupToVW(47.5px) mockupToVW(60px) mockupToVW(60px);
 		box-shadow: 0 0 18px 3px rgba(153, 153, 153, 0.5);
 
-		.wd-cta-input[type=text] {
+		.wd-cta-input[type=text],
+		.wd-cta-input[type=phone],
+		.wd-cta-input[type=email] {
 			width: mockupToVW(600px);
 			margin: mockupToVW(12.5px) 0;
 			padding: 0 mockupToVW(14px);
