--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -2165,8 +2165,6 @@ $mockup-width: 1920px;
 	}
 }
 
-#wd-cta-privacy-wrap {
-	label a {
-		color: $wedding-text-gray;
-	}
+#wd-cta-privacy-wrap label a {
+	color: $wedding-text-gray;
 }
