fix safari ::after position on wedding page

--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -2120,7 +2120,7 @@ $mockup-width: 1920px;
 					width: mockupToVW(18px);
 				    height: mockupToVW(10px);
 				    left: mockupToVW(-30px);
-				    margin-top: mockupToVW(-5px);
+				    top: 0;
 				    border-width: mockupToVW(5px);
 				    border-style: none none solid solid;
 				    border-color: $wedding-main-color;
