update navigation align

--- a/view/nav.html
+++ b/view/nav.html
@@ -64,10 +64,18 @@
 							</li>
 						</ul>
 					</li>
-					<li class="nav-main-item">
+					<li class="nav-main-item has-dropdown">
 						<a class="nav-main-link" href="index.php?route=products">
 							三三產品
+							<span class="icon-angle-down"></span>
 						</a>
+						<ul class="nav-dropdown-menu">
+							<li class="nav-dropdown-item">
+								<a class="nav-main-link" href="index.php?route=customize">
+									客製化專區
+								</a>
+							</li>
+						</ul>
 					</li>
 					<li class="nav-main-item">
 						<a class="nav-main-link" href="index.php?route=trial">
@@ -75,8 +83,8 @@
 						</a>
 					</li>
 					<li class="nav-main-item">
-						<a class="nav-main-link" href="index.php?route=customize">
-							客製化專區
+						<a class="nav-main-link" href="index.php?route=wedding">
+							婚禮小物
 						</a>
 					</li>
 					{login_status}
