add wedding page mobile version

--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -2,8 +2,10 @@
 			<div id="wd-advice">
 				<div class="wd-main-img">
 					<picture>
-						<source srcset="resource/img/wedding/01.webp" type="image/webp">
-						<img class="full-width-img" src="resource/img/wedding/01.jpg" alt="你的婚禮，能夠創造更多幸福！">
+						<source media="(min-width: 980px)" srcset="resource/img/wedding/desktop/01.webp" type="image/webp">
+						<source media="(min-width: 980px)" srcset="resource/img/wedding/desktop/01.jpg" type="image/jpeg">
+						<source media="(max-width: 979px)" srcset="resource/img/wedding/mobile/01.webp" type="image/webp">
+						<img class="full-width-img" src="resource/img/wedding/mobile/01.jpg" alt="你的婚禮，能夠創造更多幸福！">
 					</picture>
 				</div>
 				<div class="wd-text-cover">
@@ -162,8 +164,10 @@
 			<div id="wd-img-future">
 				<div class="wd-main-img">
 					<picture>
-						<source srcset="resource/img/wedding/10.webp" type="image/webp">
-						<img class="full-width-img" src="resource/img/wedding/10.jpg" alt="你的婚禮，能夠創造更多幸福！">
+						<source media="(min-width: 980px)" srcset="resource/img/wedding/desktop/10.webp" type="image/webp">
+						<source media="(min-width: 980px)" srcset="resource/img/wedding/desktop/10.jpg" type="image/jpeg">
+						<source media="(max-width: 979px)" srcset="resource/img/wedding/mobile/10.webp" type="image/webp">
+						<img class="full-width-img" src="resource/img/wedding/mobile/10.jpg" alt="你的婚禮，能夠創造更多幸福！">
 					</picture>
 				</div>
 				<div class="wd-text-cover">
@@ -270,8 +274,10 @@
 			<div id="wd-opportunities">
 				<div class="wd-main-img">
 					<picture>
-						<source srcset="resource/img/wedding/13.webp" type="image/webp">
-						<img class="full-width-img" src="resource/img/wedding/13.jpg" alt="平均一場婚禮，能夠提供 20 個憨兒一週的工作量！">
+						<source media="(min-width: 980px)" srcset="resource/img/wedding/desktop/13.webp" type="image/webp">
+						<source media="(min-width: 980px)" srcset="resource/img/wedding/desktop/13.jpg" type="image/jpeg">
+						<source media="(max-width: 979px)" srcset="resource/img/wedding/mobile/13.webp" type="image/webp">
+						<img class="full-width-img" src="resource/img/wedding/mobile/13.jpg" alt="平均一場婚禮，能夠提供 20 個憨兒一週的工作量！">
 					</picture>
 				</div>
 				<div class="wd-text-cover">
