--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -296,7 +296,8 @@
 					選用三三皂絲包作為婚禮小物
 				</p>
 				<p class="wd-super-title">
-					你的幸福婚禮，也能帶給憨兒們幸福！
+					你的幸福婚禮，<br>
+					也能帶給憨兒們幸福！
 				</p>
 			</div>
 			<div id="wd-special-offers">
