fix nav dropdown issue, now you can open dropdown by clicking icon-angle

--- a/resource/css/_nav.scss
+++ b/resource/css/_nav.scss
@@ -184,7 +184,8 @@ $nav-toggle-span-height: 2px;
 	$nav-dropdown-menu-padding: 50px;
 	$nav-dropdown-submenu-padding: 70px;
 
-	.nav-main-link > .fa-angle-right {
+	.nav-main-link > .icon-angle-right {
+		vertical-align: middle;
 		transform: rotate(90deg);
 	}
 
