fix nav dropdown issue, add new-nav class display

--- a/view/nav.html
+++ b/view/nav.html
@@ -83,7 +83,7 @@
 						</a>
 					</li>
 					<li class="nav-main-item">
-						<a class="nav-main-link" href="index.php?route=wedding">
+						<a class="nav-main-link new-nav" href="index.php?route=wedding">
 							婚禮小物
 						</a>
 					</li>
