--- a/resource/css/_nav.scss
+++ b/resource/css/_nav.scss
@@ -134,6 +134,7 @@ $nav-toggle-span-height: 2px;
 
 	.nav-main-item {
 		display: inline-block;
+		vertical-align: middle;
 		& > .nav-main-link {
 			@extend %nav-main-padding;
 		}
@@ -172,6 +173,22 @@ $nav-toggle-span-height: 2px;
 		top: 0;
 		left: $nav-dropdown-item-min-width;
 		margin-left: 0;
+	}
+
+	.new-nav {
+		position: relative;
+		&::after {
+			content: '\00B7\00B7\00B7';
+			display: flex;
+			justify-content: space-around;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			width: 100%;
+			color: #eecc33;
+			font-size: 20px;
+		}
 	}
 }
 
@@ -233,5 +250,14 @@ $nav-toggle-span-height: 2px;
 	.nav-dropdown-submenu > .nav-dropdown-item > .nav-main-link,
 	.nav-dropdown-submenu > .nav-dropdown-header {
 		padding: ($nav-dropdown-item-height - $nav-main-link-height) / 2 $nav-dropdown-submenu-padding;
+	}
+
+	.new-nav::after {
+		content: 'new';
+		display: inline-block;
+		border-radius: 4px;
+		padding: 1px 5px;
+		background-color: #e74c3c;
+		text-align: center;
 	}
 }
