debug paying process

--- a/view/user_function/pay_content.html
+++ b/view/user_function/pay_content.html
@@ -44,6 +44,11 @@
                         <input type="text" id="address" value="[order_address]">
                     </div>
                     <div class="sign-block">
+                        <label for="phone">聯絡電話</label>
+                        <br>
+                        <input type="text" id="phone" value="[order_phone]">
+                    </div>
+                    <div class="sign-block">
                         <label for="notice">訂單備註（選填）</label>
                         <br>
                         <input type="text" id="notice" value="[order_notice]">
