--- a/view/nav.html
+++ b/view/nav.html
@@ -65,11 +65,16 @@
 						</ul>
 					</li>
 					<li class="nav-main-item has-dropdown">
-						<a class="nav-main-link" href="index.php?route=products">
+						<a class="nav-main-link" href="javascript:void(0)">
 							三三產品
 							<span class="icon-angle-down"></span>
 						</a>
 						<ul class="nav-dropdown-menu">
+							<li class="nav-dropdown-item">
+								<a class="nav-main-link" href="index.php?route=products">
+									產品一覽
+								</a>
+							</li>
 							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=customize">
 									客製化專區
