fix content not showing error, add anchor for product types

--- a/view/content/moonfest.html
+++ b/view/content/moonfest.html
@@ -1,5 +1,10 @@
 		<main>
 			<div class="main-wrap products-wrap">
+				<div id="category-guide">
+					<a class="guide-anchor" href="index.php?route=soap">單品</a>
+					<a class="guide-anchor" href="index.php?route=soapstring"> / 皂絲</a>
+					<a class="guide-anchor" href="index.php?route=gift_box"> / 禮盒</a>
+				</div>
 				<p class="slogan">
 					想在中秋送份有意義又體面的禮盒，<br>
 					三三吾鄉中秋禮盒是您的不二選擇。<br>
@@ -14,7 +19,6 @@
 					送給顧客一份歡樂和一份溫暖。<br>
 					中秋禮皂系列是大器又體面的最佳選擇。
 				</h3>
-				<!-- Products -->
-				<div id="products"></div>
+				<div class="products"></div>
 			</div>
 		</main>
