--- a/view/content/newyear.html
+++ b/view/content/newyear.html
@@ -1,5 +1,10 @@
 		<main>
 			<div class="main-wrap products-wrap">
+				<div id="category-guide">
+					<a class="guide-anchor" href="index.php?route=soap">單品</a>
+					<a class="guide-anchor" href="index.php?route=soapstring"> / 皂絲</a>
+					<a class="guide-anchor" href="index.php?route=gift_box"> / 禮盒</a>
+				</div>
 				<p class="slogan">
 					新春。<br>
 					在炮竹聲響的揭幕下又開展了新的一年，<br>
@@ -10,7 +15,6 @@
 					能夠繼續包容我們這群任性的人類，<br>
 					還有鼓勵這群想一起改變世界的我們。
 				</p>
-				<!-- Products -->
-				<div id="products"></div>
+				<div class="products"></div>
 			</div>
 		</main>
