--- a/view/content/soapstring.html
+++ b/view/content/soapstring.html
@@ -1,5 +1,10 @@
 		<main>
 			<div class="main-wrap products-wrap">
+				<div id="category-guide">
+					<a class="guide-anchor" href="index.php?route=soap">單品</a>
+					<a class="guide-anchor" href="index.php?route=soapstring"> / 皂絲</a>
+					<a class="guide-anchor" href="index.php?route=gift_box"> / 禮盒</a>
+				</div>
 				<p class="slogan">
 					溫和而舒適的手作皂，綿密如雪絲，故名皂絲。<br>
 					為了解決憨兒手部精細動作不穩定的困難，<br>
@@ -14,7 +19,6 @@
 					起泡加倍，沖洗搓揉快速來一場泡沫饗宴。<br>
 					天然環保，原料天然無毒打擊化學壓製皂。
 				</h3>
-				<!-- Products -->
-				<div id="products"></div>
+				<div class="products"></div>
 			</div>
 		</main>
